--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,7 +72,7 @@
           <h2>WORK</h2>
           <div class="grid work">
             <!--ITEM-->
-            <a href="" class="item" data-id="1">
+            <a href="" class="item" data-id="0">
               <img src="./images/scale1.jpeg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -83,7 +83,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="2">
+            <a href="" class="item" data-id="1">
               <img src="./images/scale2.jpeg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -94,7 +94,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="3">
+            <a href="" class="item" data-id="2">
               <img src="./images/scale3.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -105,7 +105,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="4">
+            <a href="" class="item" data-id="3">
               <img src="./images/scale4.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -116,7 +116,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="5">
+            <a href="" class="item" data-id="4">
               <img src="./images/scale5.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -127,7 +127,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="6">
+            <a href="" class="item" data-id="5">
               <img src="./images/scale6.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -138,7 +138,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="7">
+            <a href="" class="item" data-id="6">
               <img src="./images/scale7.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -149,7 +149,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="8">
+            <a href="" class="item" data-id="7">
               <img src="./images/scale8.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
@@ -160,7 +160,7 @@
             </a>
 
             <!--ITEM-->
-            <a href="" class="item" data-id="9">
+            <a href="" class="item" data-id="8">
               <img src="./images/scale9.jpg" width="100%">
               <div class="bg-hover">
                 <div class="info">
