--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!--VIDEO-->
         <section class="main-video">
           <div class="video">
-            <video src="./images/video.mp4" autoplay loop></video>
+            <video src="./images/video.mp4" muted autoplay loop></video>
           </div>
         </section>
         <!--INTRO-->
